--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -14,7 +14,6 @@ width:100%;
 height:150px;
 }
 img.footerblue{
-
 width:100%;
 height:100px;}
  .inputs {
@@ -34,6 +33,7 @@ height:100px;}
 }
 .informationForm table{
 margin-top:0px;
+width: 98%;
 }
 .informationForm tr{
 	
@@ -203,7 +203,7 @@ width: 200px;
 }
 
 .publish-Button {
-width: 200px;
+width: 150px;
 	-moz-box-shadow: 0px 10px 14px -7px #fff6af;
 	-webkit-box-shadow: 0px 10px 14px -7px #fff6af;
 	box-shadow: 0px 10px 14px -7px #fff6af;
@@ -245,7 +245,7 @@ width: 200px;
 }
 
 .save-Button {
-width: 200px;
+width: 100px;
 	-moz-box-shadow: 0px 10px 14px -7px #162b69;
 	-webkit-box-shadow: 0px 10px 14px -7px #162b69;
 	box-shadow: 0px 10px 14px -7px #162b69;
@@ -287,7 +287,7 @@ width: 200px;
 }
 
 .cancel-Button {
-width: 200px;
+width: b   0px;
 	-moz-box-shadow: 0px 10px 14px -7px #f5978e;
 	-webkit-box-shadow: 0px 10px 14px -7px #f5978e;
 	box-shadow: 0px 10px 14px -7px #f5978e;
