--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -260,3 +260,83 @@ width: 200px;
   border: 4px solid rgba(255,255,255,0.5);
   color: #fff;
 }
+
+
+/*
+   #sortable1      -> Question Form Type
+   #sortable2      -> Question Making Area
+   #sortable4      -> Question Destroy Area
+   #field_question -> #sortable2 <div></div>
+   li              -> Elements of #sortable#
+*/
+
+#sortable1 {
+   border: 5px solid #eee;
+   width: 200px;               /* Change */
+   list-style-type: none;
+   margin: 0;
+   padding: 5px 0 0 0;
+   float: left;
+   font-size:12px;
+   font-family:Arial;
+   font-weight:normal;
+}
+#sortable1 li {
+   margin: 0px 0px 5px 5px; /*  TOP RIGHT DOWN LEFT  */
+   font-size: 1.2em;
+   width: 94%;
+   height: 30px;
+}
+
+#field_question {
+   overflow:scroll;
+   height: 800px;
+   border: 5px solid #eee;
+}
+
+#sortable2 {
+   border: 1px solid #eee;
+   width: 555px;
+   list-style-type: none;
+   margin: 0;
+   padding: 5px 0 0 0;
+   float: left;
+   margin-right: 0px;
+}
+
+#sortable2 li {
+   margin: 0 5px 5px 5px;
+   padding: 5px;
+   font-size: 1.2em;
+   width: 95%;
+}
+
+#sortable4 {
+   border: 5px solid #eee;
+   width: 200px;
+   height: 160px;
+   list-style-type: none;
+   margin: 0;
+   padding: 5px 0 0 0;
+   float: left;
+   background-image: url("../images/recycle_close.jpeg");
+}
+#sortable4 li {
+   margin: 0 5px 5px 5px;
+   padding: 5px;
+   font-size: 1.2em;
+}
+
+/* TextArea Color Change When on Focus */
+textarea {
+   width: 95%;
+   border: 3px solid #cccccc;
+   padding: 5px;
+   font-family: Tahoma, sans-serif;
+   resize: none;
+}
+
+input[type=text]:focus, textarea:focus {
+   background-color: #FFBFFF;
+   border: 1px solid #ccc;
+}
