--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -9,26 +9,29 @@ background-image: #FFF;
 	font-weight: 500;
 	
 }
+
 div.scroll{
-width:800px;
-height: 500px;
-overflow: scroll;
-}
-img.testLogo{
-width: 200px;
-position:fixed;
-top:0px;
-left: 50px;
-z-index:100;
-}
-img.header{
-position: fixed;
-width:100%;
-height:150px;
-z-index: 20;
+
+
+	/*overflow: scroll;*/
 }
 
- .inputs {
+img.testLogo{
+	width: 200px;
+	position:fixed;
+	top:0px;
+	left: 50px;
+	z-index:100;
+}
+
+img.header{
+	position: fixed;
+	width:100%;
+	height:150px;
+	z-index: 20;
+}
+
+.inputs {
     height: 30px;
     border: 3px solid #EBE6E2;
     border-radius: 5px;
@@ -135,16 +138,16 @@ width: 98%;
 	font-family: 'Arial Rounded MT Bold', 'Helvetica Rounded', Arial, sans-serif;
 	font-size: 24px;
 	background: #93cede; /* Old browsers */
-top: 0px;
-left:0px;
-position: absolute;
+	top: 0px;
+	left:0px;
+	position: absolute;
 }
 div.content{
 	width:100%;
 	height:100%;
-	position: fixed;
-	padding-left:20px;
-	margin:150px 50px;
+	position: absolute;
+	/*padding-left:20px;*/
+
 	text-align: left;
 	line-height:40px;
 	left:0px;
@@ -152,22 +155,19 @@ div.content{
 }
 .mainTable{
 }
-.footer{
-color: #666;
-position: fixed;
-bottom:60px;
-height: 50px;
-width:100%;
-text-align:center;
-z-index:10;
+
+#footer{
+	position: relative;
+	color: #666;
+	text-align: center;
+	z-index:10;
 }
-img.footerblue{
-position: fixed;
-bottom: 0px;
-left:0px;
-width: 100%;
-height:100px;
-z-index: 5;
+img.footerblue {
+	position: absolute;
+	left:0px;
+	width: 100%;
+	height:100px;
+	z-index: 5;
 }
 .title{
 top: 10px;
@@ -204,9 +204,9 @@ background-color: #3184a1;
 
 .logout-button {
 z-index: 26;
-position: fixed;
+position: absolute;
 top: 10px;
-right: 100px;
+
 width: 200px;
 	-moz-box-shadow: 0px 10px 14px -7px #691632;
 	-webkit-box-shadow: 0px 10px 14px -7px #691632;
@@ -243,10 +243,39 @@ width: 200px;
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#570707', endColorstr='#b35959',GradientType=0);
 	background-color:#570707;
 }
+#wrap {
+	position: relative;
+	padding-top: 120px;
+	min-width: 1200px;
+}
+
+#middle {
+	vertical-align: top;
+	min-width: 550px;
+	position: relative;
+}
+
+#left {
+	vertical-align: top;
+	min-width: 350px;
+	position: relative;
+	padding-top: 60px;
+}
+
+#right {
+	vertical-align: top;
+	min-width: 300px;
+	position: relative;
+	padding-top: 100px;
+}
+
+/* Logout Button Bug
 .logout-button:active {
 	position:relative;
 	top:1px;
 }
+*/
+
 .buttons {
 	width: 200px;
   font-family: verdana;
@@ -270,11 +299,15 @@ width: 200px;
    li              -> Elements of #sortable#
 */
 
+#form_question {
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
 #sortable1 {
    border: 5px solid #eee;
-   width: 200px;               /* Change */
+   width: 250px;               /* Change */
    list-style-type: none;
-   margin: 0;
    padding: 5px 0 0 0;
    float: left;
    font-size:12px;
@@ -289,9 +322,9 @@ width: 200px;
 }
 
 #field_question {
-   overflow:scroll;
-   height: 800px;
-   border: 5px solid #eee;
+   /*overflow:scroll;*/
+   /*height: 800px;*/
+   /*border: 5px solid #eee;*/
 }
 
 #sortable2 {
@@ -302,6 +335,7 @@ width: 200px;
    padding: 5px 0 0 0;
    float: left;
    margin-right: 0px;
+   min-height: 300px;
 }
 
 #sortable2 li {
@@ -319,7 +353,7 @@ width: 200px;
    margin: 0;
    padding: 5px 0 0 0;
    float: left;
-   background-image: url("../images/recycle_close.jpeg");
+   background-image: url("./images/recycle_close.jpeg");
 }
 #sortable4 li {
    margin: 0 5px 5px 5px;
