--- a/loginStyle.css
+++ b/loginStyle.css
@@ -1,3 +1,70 @@
+ul#css3menu1{
+  margin-top: 300px;list-style:none;padding:0;background-color:#424542;border-width:2px;border-style:solid;border-color:#FFF;-moz-border-radius:7px;-webkit-border-radius:7px;border-radius:7px;
+}
+
+ul#css3menu1 ul{
+  margin:0;list-style:none;padding:0;background-color:#424542;border-width:2px;border-style:solid;border-color:#FFF;-moz-border-radius:7px;-webkit-border-radius:7px;border-radius:7px;}
+ul#css3menu1 ul{
+  display:none;position:absolute;left:100%;top:0;-moz-box-shadow:3.5px 3.5px 5px #000000;-webkit-box-shadow:3.5px 3.5px 5px #000000;box-shadow:3.5px 3.5px 5px #000000;border-radius:7px;-moz-border-radius:7px;-webkit-border-radius:7px;padding:0 3px 3px;}
+ul#css3menu1 li:hover>*{
+  display:block;}
+ul#css3menu1 li{
+  position:relative;display:block;white-space:nowrap;font-size:0;}
+ul#css3menu1 li:hover{
+  z-index:1;}
+ul#css3menu1 ul ul{
+  position:absolute;left:100%;top:0;}
+ul#css3menu1{
+  font-size:0;z-index:999;position:relative;display:block;float:left;padding:0 3px 3px;}
+ul#css3menu1>li{
+  margin:3px 0 0;}
+ul#css3menu1 a:active, ul#css3menu1 a:focus{
+  outline-style:none;}
+ul#css3menu1 a{
+  display:block;vertical-align:middle;text-align:left;text-decoration:none;font:14px Trebuchet MS;color:#FFF;cursor:pointer;padding:10px;background-color:#424542;background-image:none;background-repeat:repeat;border-width:1px 0 0 0;border-style:solid;border-color:#424542;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;}
+ul#css3menu1 ul li{
+  float:none;margin:3px 0 0;}
+ul#css3menu1 ul a{
+  text-align:left;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;color:#FFF;text-decoration:none;}
+ul#css3menu1 li:hover>a,ul#css3menu1 li a.pressed{
+  background-color:#00aaff;border-color:#424542;border-style:solid;color:#000;background-image:url("mainbk.png");}
+ul#css3menu1 span{
+  display:block;overflow:visible;background-image:url("arrowsub.png");background-position:right center;background-repeat:no-repeat;padding-right:14px;}
+ul#css3menu1 ul span{
+  background-image:url("arrowsub.png");padding-right:14px;}
+ul#css3menu1 > li.switch{
+  display:none;cursor:pointer;width:25px;height:20px;padding:10px;}
+ul#css3menu1 > li.switch:before{
+  content:"";position:absolute;display:block;height:4px;width:25px;border-radius:4px;background:#FFF;-moz-box-shadow:0 8px #FFF, 0 16px #FFF;-webkit-box-shadow:0 8px #FFF, 0 16px #FFF;box-shadow:0 8px #FFF, 0 16px #FFF;}
+ul#css3menu1 > li.switch:hover:before{
+  background:#000;-moz-box-shadow:0 8px #000, 0 16px #000;-webkit-box-shadow:0 8px #000, 0 16px #000;box-shadow:0 8px #000, 0 16px #000;}
+.c3m-switch-input{
+  display:none;}
+ul#css3menu1 li:hover>a,ul#css3menu1 li > a.pressed{
+  background-color:#00aaff;background-image:url("mainbk.png");border-style:solid;border-color:#424542;color:#000;text-decoration:none;}
+ul#css3menu1 ul li:hover>a,ul#css3menu1 ul li > a.pressed{
+  color:#000;text-decoration:none;}
+ul#css3menu1 li.topfirst>a{
+  border-width:0;}
+ul#css3menu1 li.subfirst>a{
+  border-width:0;}
+@media screen and (max-width: 768px) {
+  ul#css3menu1 > li {
+    position: initial;}
+  ul#css3menu1 ul .submenu,ul#css3menu1 li > ul {
+    left: 0; right:auto; top: 100%;}
+  ul#css3menu1 .submenu,ul#css3menu1 ul,ul#css3menu1 .column {
+    -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;padding-right: 0;width: 100% !important;}
+}
+@media screen and (max-width: 379px) {
+  ul#css3menu1 {
+    width: 100%;}
+  ul#css3menu1 > li {
+    display: none;		position: relative;		width: 100% !important;}
+  ul#css3menu1 > li.switch,.c3m-switch-input:checked + ul#css3menu1 > li + li {
+    display: block;}
+  ul#css3menu1 > li.switch > label {		position: absolute;cursor: pointer;top: 0;left: 0;right: 0;bottom: 0;}}
+
 body {
   margin:0px 0px;
   font-family: Rockwell, 'Courier Bold', Courier, Georgia, Times, 'Times New Roman', serif;
