--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -136,7 +136,7 @@ width: 98%;
    position: absolute;
 }
 div.content{
-width:100%;
+    width:100%;
 	height:100%;
 	position: absolute;
 	text-align: left;
@@ -150,8 +150,8 @@ width:100%;
 #footer{
    position: relative;
    color: #666;
-   text-align: center;
-   z-index:10;
+   width: 100%;
+    bottom: 0px;
 }
 img.footerblue{
    position: absolute;
@@ -160,6 +160,16 @@ img.footerblue{
    height:100px;
    z-index: 5;
 }
+#footer div {
+    z-index: 100;
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+}
+
 .title{
    top: 10px;
    position:fixed;
@@ -256,7 +266,7 @@ width: 200px;
 /* By YoungChan Youn */
 #wrap {
 	position: relative;
-	padding-top: 100px;
+	padding-top: 130px;
 	min-width: 1000px;
 }
 
@@ -265,15 +275,15 @@ width: 200px;
 	min-width: 650px;
 	max-width: 650px;
 	position: relative;
-    left: 55%;
+   left: 55%;
 }
 
 #left {
-	vertical-align: top;
-	min-width: 350px;
-    padding-top: 70px;
-    position: fixed;
-	left: 5em;
+   vertical-align: top;
+   min-width: 350px;
+   padding-top: 70px;
+   position: fixed;
+   left: 5em;
 }
 
 #destroy_question {
@@ -368,8 +378,8 @@ textarea {
 }
 
 input[type=text]:focus, textarea:focus {
-   background-color: #FFBFFF;
-   border: 3px solid #ccc;
+   background-color: #D1F0FF;
+   border: 1px solid #ccc;
 }
 
 .q_tf_op {
