--- a/loginStyle.css
+++ b/loginStyle.css
@@ -21,11 +21,7 @@ width:200px;
 img.slideshow{
 position:fixed;
 width:100%;
-height:90%}
-img.footerblue{
-width:100%;
-height:100px;}
-
+height:95%}
 div.content{
 	width:90%;
 	height: 100%;
@@ -37,14 +33,26 @@ div.content{
 	left:0px;
 	right:0px;
 }
-.footer{
-color: #666666;
-position:fixed;
-bottom: 0px;
-width:100%;
-text-align:center;
-z-index: 10;
-
+.footer {
+   color: #666666;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
+}
+.footer ft {
+   position: relative;
+   bottom: 15px;
+   color: white;
+   z-index: 20;
+}
+img.footerblue {
+   width:100%;
+   height:100px;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   z-index: 10;
 }
 .title{
 top: 10px;
@@ -142,7 +150,7 @@ background: #006699;
   background: rgba(0,0,0,0);
   top: 30px;
   right : 10%;
-  width: 500px;
+  width: auto;
 }
 #cssmenu ul {
   list-style: none;
