--- a/templateStyle.css
+++ b/templateStyle.css
@@ -192,29 +192,26 @@ div.content{
     color: #ffffff;
 }
 
-#footer{
-    position: relative;
-    bottom: -160px;
-    color: #fff;
-    text-align: center;
-    z-index:10;
+.footer {
+   color: #666666;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
 }
-img.footerblue{
-    position: absolute;
-    left:0px;
-    bottom:0px;
-    width: 100%;
-    height:100px;
-    z-index: 5;
+.footer ft {
+   position: relative;
+   bottom: 15px;
+   color: white;
+   z-index: 20;
 }
-#footer div {
-    z-index: 100;
-    position: absolute;
-    top: 60px;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    color: white;
+img.footerblue {
+   width:100%;
+   height:100px;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   z-index: 10;
 }
 
 .questionType-button {
