--- a/teacherHomePage.css
+++ b/teacherHomePage.css
@@ -28,11 +28,13 @@ img.testLogo{
 }
 .testEachCourse{
     position: absolute;
-    top: 200px;
+    top: 170px;
     left: 400px;
     width: 800px;
-    height: 380px;
+    height: 63%;
     overflow-y: scroll;
+   border-spacing: 15px;
+   border: 5px solid lightblue;
 }
 #courseTable{
     width: 200px;
@@ -41,7 +43,7 @@ img.testLogo{
 {
     text-align: center;
     color: white;
-    background-color:#FF9900 ;
+    background-color:#FF9900;
 }
 #courseTD:hover
 {
@@ -53,8 +55,8 @@ img.testLogo{
     width: 800px;
 }
 #testTable{
-    border-spacing: 15px;
-    border: 1px solid lightblue;
+    /*border-spacing: 15px;
+    border: 1px solid lightblue;*/
 }
 #testTitle{
     font-size: 30px;
@@ -119,7 +121,7 @@ img.testLogo{
 #classTitle{
     font-size: 40px;
     position: fixed;
-    top: 150px;
+    top: 120px;
     left: 400px;
     color:black;
     z-index:100;
@@ -337,5 +339,15 @@ img.footerblue {
     #cssmenu ul li a:before {
         display: none;
     }
+}
+
+.loader {
+   position: relative;
+   margin-left: auto;
+   margin-right: auto;
+   width: 100%;
+   height: 100%;
+   z-index: 9999;
+   background: url('./images/ajax-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
