--- a/teacherHomePage.css
+++ b/teacherHomePage.css
@@ -25,6 +25,7 @@ img.testLogo{
     top: 140px;
     width: 220px;
     overflow-y: scroll;
+    z-index: 30;
 }
 .testEachCourse{
     position: absolute;
@@ -350,4 +351,15 @@ img.footerblue {
    z-index: 9999;
    background: url('./images/ajax-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
+
+.welcome {
+   position: relative;
+   margin-left: auto;
+   margin-right: auto;
+   width: 100%;
+   height: 100%;
+   z-index: 9999;
+   background: url('./images/megamonkeyslogo.png') 50% 50% no-repeat rgb(249,249,249);
+}
+
 
