--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -1,4 +1,3 @@
-
 body {
    background-image: #FFF;
    background-size: cover;
@@ -22,7 +21,7 @@ img.testLogo{
    position:fixed;
    top:0px;
    left: 50px;
-   z-index:100;
+   z-index:50;
 }
 img.header{
    position: fixed;
@@ -140,6 +139,7 @@ img.header{
    top: 0px;
    left:0px;
    position: absolute;
+   z-index: 26;
 }
 div.content{
    width:100%;
@@ -573,4 +573,15 @@ input[type=text]:focus, textarea:focus {
    #cssmenu ul li a:before {
       display: none;
    }
+}
+
+.loader {
+   position: relative;
+   top: 50%;
+   margin-left: auto ;
+   margin-right: auto ;
+   width: 300px;
+   height: 300px;
+   z-index: 999;
+   background: url('./images/ajax-loader.gif') 50% 50% no-repeat;
 }
