--- a/loginStyle.css
+++ b/loginStyle.css
@@ -21,12 +21,13 @@ width:200px;
 img.slideshow{
 position:fixed;
 width:100%;
-height:95%}
+height:90%}
 div.content{
 	width:90%;
 	height: 100%;
 	padding-left:20px;
 	margin:0px auto;
+    margin-top: 60px;
 	background-color: rgba(255,255,255,0.2);
 	text-align: left;
 	line-height:40px;
