YC - Minor Bug Fix & Teacher Pages Redirection
Minor Bug
1. Displaying wrong section #
2. Teacher Page Session Check

Teacher Page Improvements
1. Session User Type Check
2. Test Making URL Access Block
3. Go Back to Create or Modified Test Page

Student Page Improvements
1. Item dynamic re-size
2. Loading Image Change

--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -583,5 +583,5 @@ input[type=text]:focus, textarea:focus {
    width: 300px;
    height: 300px;
    z-index: 999;
-   background: url('./images/ajax-loader.gif') 50% 50% no-repeat;
+   background: url('./images/monkeyload.gif') 50% 50% no-repeat;
 }
