--- a/studentHomePage2.css
+++ b/studentHomePage2.css
@@ -30,7 +30,7 @@ img.testLogo{
    position: absolute;
    top: 170px;
    left: 400px;
-   width: 900px;
+   width: 800px;
    height: 63%;
    overflow-y: scroll;
    border-spacing: 15px;
@@ -374,6 +374,6 @@ img.footerblue {
    width: 100%;
    height: 100%;
    z-index: 9999;
-   background: url('images/ajax-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+   background: url('images/monkeyload.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
