--- a/teacherHomePage.css
+++ b/teacherHomePage.css
@@ -48,7 +48,7 @@ img.testLogo{
 }
 #courseTD:hover
 {
-    background-color: yellow;
+    background-color: #3399FF;
     cursor:pointer;
 }
 #testTD{
