--- a/testGradingPage.css
+++ b/testGradingPage.css
@@ -9,11 +9,20 @@ body {
     font-variant: normal;
     font-weight: 500;
 }
+#wrapper{
+width : 100%;
+height: auto;
+background-color:white;
+position:absolute;
+top: 100px;
+margin-bottom: 0px;
+z-index:30;
+}
 img.header{
    position: fixed;
    width:100%;
    height:150px;
-   z-index: 26;
+   z-index: 40;
 }
 #studentTable{
   width: 200px;
@@ -37,17 +46,17 @@ img.testLogo{
     left: 50px;
     z-index:100;
 }
+
 .testQuestions{
-    position: absolute;
-    top: 170px;
+    position: relative;
+    top: 30px;
     left: 400px;
     width: 900px;
    min-height: 300px;
-    overflow-y: scroll;
+/*    overflow-y: scroll;*/
    border-spacing: 15px;
    border: 5px solid lightblue;
    z-index:50;
-   background-color: white;
 }
 .essayText{
 	width: 500px;
@@ -56,12 +65,14 @@ img.testLogo{
 #points{
 	width: 30px;
 	height: 30px;
+	font-size:20px;
 }
 #pointBox{
 	width:100px;
 	padding-left: 20px;
 	padding-right: 20px;
 	font-size: 30px;
+	border:1px solid #66CCFF;
 }
 #theQuestion{
 	padding-left:0px;
@@ -78,9 +89,14 @@ img.testLogo{
     color:black;
     z-index:100;
 }
-#studentInformation{
+#studentList{
 position: fixed;
 top: 200px;
+}
+#studentInformation{
+position: fixed;
+height:450px;
+top: 240px;
 overflow-y:scroll;
 }
 .submit-button {
@@ -106,7 +122,7 @@ overflow-y:scroll;
 }
 
 .logout-button {
-    z-index: 26;
+    z-index:60;
     position: fixed;
     right: 50px;
     top: 10px;
@@ -152,13 +168,14 @@ div.content{
 
 .footer {
    color: #666666;
-   position: fixed;
-   bottom: 0;
+   position: relative;
+   height: 150px;
    width: 100%;
    text-align: center;
 }
-.footer ft {
-   position: relative;
+.footer div {
+   position: absolute;
+   width: 100%;
    bottom: 15px;
    color: white;
    z-index: 20;
@@ -167,7 +184,7 @@ img.footerblue {
    width:100%;
    height:100px;
    position: absolute;
-   bottom: 0;
+   bottom: 0px;
    left: 0;
    z-index: 10;
 }
@@ -308,4 +325,6 @@ img.footerblue {
    z-index: 9999;
    background: url('./images/ajax-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
-
+.table_border_style table{
+	border:1px solid #66CCFF;
+}
